# stowr

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: commands.rs  config.rs  main.rs  storage.rs  tests.rs
