[package]
name = "stowr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.36", features = ["bundled"] }
flate2 = "1.0"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
