[package]
name = "stowr"
version = "0.2.0"
edition = "2021"

description = "A simple CLI tool for file management, including compressing, extracting, renaming, and organizing files."
homepage = "https://github.com/XiaoLinXiaoZhu/stowr"
license = "GPL-3.0-or-later"
repository = "https://github.com/XiaoLinXiaoZhu/stowr"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.36", features = ["bundled"] }
flate2 = "1.0"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1.10"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
